# fencer

./: CHANGES.md  LICENSE  Pipfile  README.md  pyproject.toml  run.sh
apisec/: cli.py  main.py
fencer/: BFLA.py  BOLA.py  IDOR.py  __init__.py  api_spec.py  authorized_endpoints.py  cli.py  jwt_test.py  main.py  mass_assignment.py  sql_injection.py  test_case.py  test_runner.py  xss_injection.py
tests/: api_spec_test.py  orders_api_spec.yaml  sql_injection_test.py
